Fix header graph copy spacing
fixes #8

--- a/assets/css/_header.styl
+++ b/assets/css/_header.styl
@@ -1,3 +1,7 @@
+.header-copy
+  padding-top: 5px
+  line-height: 115%
+
 .header
   height: 526px
   background: url("../img/hero.png") center
